--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
-html {
+/* html {
   box-sizing: border-box;
-}
+} */
 
 body {
   margin: 0;
@@ -21,9 +21,9 @@ button {
 }
 
 html {
-  font-size: 175%;
-  font-weight: 300;
-  line-height: 1.3;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 body {
@@ -34,16 +34,8 @@ body {
   justify-content: center;
 }
 
-.container {
-  max-width: 20em;
-}
-
-.container > p {
-  text-align: center;
-}
-
 .calculator {
-  border-radius: 12px;
+  border-radius: 15px;
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
   margin-left: auto;
   margin-right: auto;
@@ -53,9 +45,9 @@ body {
 }
 
 .calculator__display {
-  background-color: #222222;
-  color: #fff;
-  font-size: 1.714285714em;
+  background-color: #241f1f;
+  color: rgb(231, 228, 228);
+  font-size: 1.4em;
   padding: 0.5em 0.75em;
   text-align: right;
 }
@@ -74,20 +66,6 @@ body {
   text-align: center;
 }
 
-.calculator__keys > *:active::before,
-.calculator__keys > .is-depressed::before {
-  background-color: rgba(0, 0, 0, 0.2);
-  bottom: 0;
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5) inset;
-  content: "";
-  left: 0;
-  opacity: 0.3;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 1;
-}
-
 .key--operator {
   background-color: #eee;
 }
@@ -97,3 +75,4 @@ body {
   grid-column: -2;
   grid-row: 2 / span 4;
 }
+ 
